--- a/net-lab/.vscode/settings.json
+++ b/net-lab/.vscode/settings.json
@@ -5,5 +5,6 @@
         "string_view": "c",
         "atomic": "c",
         "cstdint": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
